--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -87,6 +87,20 @@ html, body {
     box-sizing: border-box; /* padding tar ej extra bredd */
 }
 
+.product-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-content: center; 
+    align-items: center; 
+    width: calc(100% - 100px); 
+    max-width: 1100px; 
+    margin: 0 auto; 
+    padding: 10px 50px; 
+    gap: 20px; 
+    box-sizing: border-box; 
+}
+
+
 /* individuell produkt kort */
 .category {
     display: flex;
